* Updated test cases for the model strategies * Added documentation to each of the classes

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -49,6 +49,15 @@ subprojects {
 		implementation 'org.jetbrains:annotations:23.0.0'
 		testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
 	}
+
+	test {
+		useJUnitPlatform()
+	}
+
+	java {
+		withSourcesJar()
+	}
+
 }
 
 curseforge {
