[Patch]: Baked model selection rewrite (#873)
## Baked model selection rewrite
Closes #870 
Closes #865 

**Goal**: Rebuild the model selection process to be more flexible and
easier to maintain

## Changes
* Removes the old monolith class that handled everything before
* Removed itemstack cache keys
* Removed the old 
* Removed dependency on the deprecated Fabric Model selection api

* Adds a new 1-1 binding between items and the Unbaked model class
* Implemented using Fabric's new ModelLoadingPlugin
* Adds a system of decorator strategies to be able to quickly set up and
build a BakedModel selection process
* Added the following selectors: AsyncStrategy, SingleCachedStrategy,
LayeredCachedStrategy, DefaultedBakedModelStrategy, ModelBakerStrategy


## Compatibility
* Adds compat for Modernfix
* Adds compat for Emissive Textures plugin

## Further work
- [ ]  #890

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	//modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
 	//modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
+	modCompileOnly("maven.modrinth:moremcmeta-emissive:v1.20.2-2.0.4-fabric")
+	
 	// Betterend & Betternether
 	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
 	// modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
@@ -32,7 +34,8 @@ dependencies {
 	//emi
 	//modCompileOnly "dev.emi:emi:${emi_version}:api"
 	//modLocalRuntime "dev.emi:emi:${emi_version}"
-	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
+	// modImplementation "maven.modrinth:emi-loot:0.6.5+1.20.1"
+	// modImplementation "maven.modrinth:emi:1.1.4+1.20.1+fabric"
 
 	//JEI
 	// modRuntimeOnly "maven.modrinth:jei:${project.jei_version}"
