* Disabled multi module optimizations

--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,4 +1,4 @@
-yarn_mappings=1.20.4+build.3
+yarn_mappings=1.20.4+build.1
 loader_version=0.15.7
 
 # Fabric api
@@ -7,5 +7,5 @@ fabric_version=0.96.1+1.20.4
 aarp_version=0.8.1
 
 # Loom
-fabric.loom.multiProjectOptimisation=true
+# fabric.loom.multiProjectOptimisation=true
 
