--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -4,7 +4,7 @@
 cloth_config_version=10.0.96+fabric
 # Cardinal Components API
 # https://github.com/OnyxStudios/Cardinal-Components-API
-cca_version=5.0.2
+cca_version=5.2.1
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
 modmenu_version=7.2.2
 spruceui_version=4.2.0+1.19.4
@@ -43,3 +43,6 @@ better_combat_version=1.7.3+1.20.1-fabric
 justload_version=1.0.3
 jei_version=15.2.0.27
 yacl_version=3.2.2+1.20
+simple_hats_version=1.20.1-0.2.0$
+trinkets_version=3.7.2
+
