--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -19,13 +19,21 @@ dependencies {
 	modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
 	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
+	// Simple hats
+	// modImplementation("maven.modrinth:simple-hats:${project.simple_hats_version}")
+	// modImplementation("maven.modrinth:trinkets:${project.trinkets_version}")
+
+	// Cardinal
+	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+
 	//better combat
 	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
 	//modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
 	//modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
-	modCompileOnly("maven.modrinth:moremcmeta-emissive:v1.20.2-2.0.4-fabric")
-	
+	// modCompileOnly("maven.modrinth:moremcmeta-emissive:v1.20.2-2.0.4-fabric")
+
 	// Betterend & Betternether
 	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
 	// modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
@@ -73,8 +81,6 @@ dependencies {
 	//modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
 	//include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 	// Cardinal Components
-	//modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-	//modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
 	//ae2 testing
 	//modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
