--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -43,3 +43,6 @@ better_combat_version=1.7.3+1.20.1-fabric
 justload_version=1.0.3
 jei_version=15.2.0.27
 yacl_version=3.2.2+1.20
+# modonomicon
+minecraft_version=1.20.1
+modonomicon_version=1.69.0
