* Added models for the guidebook

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,12 @@ allprojects {
 				includeGroup "com.jamieswhiteshirt"
 			}
 		}
+		maven {
+			url "https://dl.cloudsmith.io/public/klikli-dev/mods/maven/"
+			content {
+				includeGroup "com.klikli_dev"
+			}
+		}
 	}
 
 	dependencies {
