Got it working POG

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	localRuntime project(':content:forgero-vanilla')
 	localRuntime project(':content:forgero-extended')
+	localRuntime project(':content:forgero-deprecated')
 	localRuntime project(':content:forgero-compat')
 	localRuntime project(':content:forgero-structures')
 
