More stuff removed / renamed

--- a/content/forgero-deprecated/src/main/resources/data/forgero/packs/deprecated-extended/package.json
+++ b/content/forgero-deprecated/src/main/resources/data/forgero/packs/deprecated-extended/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handle-variants",
+  "name": "deprecated-extended",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
