--- a/content/forgero-deprecated/src/main/resources/data/forgero/packs/deprecated-materials/package.json
+++ b/content/forgero-deprecated/src/main/resources/data/forgero/packs/deprecated-materials/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extended-materials",
+  "name": "deprecated-materials",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
