--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ modid=forgero
 # Minecraft version
 minecraft_version=1.20.1
 # Forgero version
-forgero_version=0.12.0-rc-5
-release_type=beta
+forgero_version=0.12.0
+release_type=release
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 # Optimizations
