--- a/fabric/modules/generator/build.gradle
+++ b/fabric/modules/generator/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
 	implementation project(":forgero-core")
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 }
