--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -3,11 +3,11 @@ dependencies {
 	api project(path: ':fabric:modules:generator', configuration: 'namedElements')
 	api project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation("maven.modrinth:arrp:${project.aarp_version}")
-	include("maven.modrinth:arrp:${project.aarp_version}")
+	modImplementation("maven.modrinth:arrp:${project.arrp_version}")
+	include("maven.modrinth:arrp:${project.arrp_version}")
 
 	localRuntime project(':content:forgero-vanilla')
 	localRuntime project(':content:forgero-extended')
