--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
-# Mod Properties
-modid=forgero
-# Minecraft version
-minecraft_version=1.20.1
-# Forgero version
-forgero_version=0.12.0
-release_type=release
+# Gradle settings
+# Increase memory available to Gradle, enable parallelism, and enable caching
+org.gradle.jvmargs=-Xmx4G
+org.gradle.parallel=true
+org.gradle.caching=true
+
+# Mod properties
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
-# Optimizations
-org.gradle.parallel=true
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+mod_id=forgero
+forgero_version=0.12.0
+release_type=release
+
+# Minecraft version
+minecraft_version=1.20.1
