--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+//file:noinspection GroovyAccessibility
+//file:noinspection GroovyAssignabilityCheck
+
 plugins {
 	id "maven-publish"
 }
-
 
 def isSnapshotVersion = { versionString ->
 	return versionString.contains("-g")
@@ -21,7 +23,7 @@ def getGitVersion = { ->
 
 		// If it's a snapshot version, append '-SNAPSHOT'
 		if (isSnapshotVersion(gitVersionStringParsed)) {
-			return gitVersionStringParsed += "-SNAPSHOT"
+			return gitVersionStringParsed + "-SNAPSHOT"
 		} else {
 			return projectVersion
 		}
@@ -41,6 +43,7 @@ subprojects {
 	group = project.maven_group
 
 	repositories {
+		mavenLocal()
 		mavenCentral()
 		maven { url "https://api.modrinth.com/maven" }
 		maven { url "https://cursemaven.com" }
@@ -55,20 +58,15 @@ subprojects {
 		maven { url 'https://maven.gegy.dev' }
 		maven { url 'https://maven.kosmx.dev/' }
 		maven { url 'https://jitpack.io' }
+		maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
 		maven {
 			name = "Xander Maven"
 			url = "https://maven.isxander.dev/releases"
 		}
-		maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
 		maven {
-			url "https://libraries.minecraft.net"
-		}
-		maven {
-			// Cardinal components
 			name = 'Ladysnake Mods'
 			url = 'https://maven.ladysnake.org/releases'
 		}
-		mavenLocal()
 	}
 }
 
@@ -76,7 +74,6 @@ subprojects { project ->
 	if (project.name != 'content') {
 		apply plugin: "maven-publish"
 		apply plugin: "java-library"
-
 
 		publishing {
 			repositories {
@@ -110,10 +107,9 @@ subprojects { project ->
 	}
 }
 
-
-task copyJars(type: Copy) {
+tasks.register('copyJars', Copy) {
 	group = 'build'
 	from subprojects.collect { it.tasks.withType(AbstractArchiveTask) }
 	exclude "**/*-dev.jar"
-	into "$buildDir/libs"
+	into "${project.layout.buildDirectory}/libs"
 }
