--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -1,3 +1,6 @@
+//file:noinspection GroovyAccessibility
+//file:noinspection GroovyAssignabilityCheck
+
 dependencies {
 	api project(':forgero-core')
 	api project(path: ':fabric:modules:generator', configuration: 'namedElements')
