--- a/fabric/minecraft-common/build.gradle
+++ b/fabric/minecraft-common/build.gradle
@@ -1,3 +1,6 @@
+//file:noinspection GroovyAccessibility
+//file:noinspection GroovyAssignabilityCheck
+
 dependencies {
 	api project(':forgero-core')
 }
