--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -19,13 +19,16 @@ dependencies {
 	modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
 	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
+	// Create
+	//modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_version}")
+
 	// Simple hats
 	// modImplementation("maven.modrinth:simple-hats:${project.simple_hats_version}")
 	// modImplementation("maven.modrinth:trinkets:${project.trinkets_version}")
 
 	// Cardinal
-	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	 modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	 modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
 	//better combat
 	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
@@ -68,18 +71,21 @@ dependencies {
 	//modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
 	//mythicmetals testing
-	//modImplementation "curse.maven:mythicmetals-410127:4118479"
-	//modImplementation "curse.maven:alloy-forgery-438718:4073356"
-	//modImplementation "curse.maven:owo-lib-532610:4028921"
-	//annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
-	//modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
-	//modImplementation "curse.maven:roughly-enough-resources-325625:3837336"
-	//modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
-	//modApi "curse.maven:modmenu-308702:4145207"
-	//modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
-	//include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
+	modImplementation "maven.modrinth:mythicmetals:${project.mm_version}"
+	modRuntimeOnly "maven.modrinth:alloy-forgery:${project.af_version}"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+
+	// OwO
+	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+
+	// Mixin Extras
+	implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${project.me_version}"))
+
+	// Additional Entity Attributes
+	modImplementation ("maven.modrinth:additionalentityattributes:${project.aea_version}")
+
+
 	// Cardinal Components
 
 	//ae2 testing
