--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -3,8 +3,7 @@
 # https://github.com/shedaniel/cloth-config
 cloth_config_version=10.0.96+fabric
 # Cardinal Components API
-# https://github.com/OnyxStudios/Cardinal-Components-API
-cca_version=5.2.1
+
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
 modmenu_version=7.2.2
 spruceui_version=4.2.0+1.19.4
@@ -17,9 +16,7 @@ alloyforgery_version=2.0.16+1.19
 rei_version=9.1.577
 rer_version=2.5.2
 architectury_version=6.1.39
-# OwO
-# https://maven.wispforest.io/io/wispforest/owo-lib/
-owo_version=0.8.5+1.19
+
 # Apoli
 # https://github.com/apace100/apoli
 apoli_version=624eb4d
@@ -45,4 +42,24 @@ jei_version=15.2.0.27
 yacl_version=3.2.2+1.20
 simple_hats_version=1.20.1-0.2.0$
 trinkets_version=3.7.2
+create_version = 0.5.1-f-build.1467+mc1.20.1
+
+# Mythic Metals: https://modrinth.com/mod/mythicmetals
+mm_version=0.19.9+1.20.1
+
+# Alloy Forgery: https://modrinth.com/mod/alloy-forgery
+af_version=2.1.0+1.20
+
+# OwO
+# https://maven.wispforest.io/io/wispforest/owo-lib/
+owo_version=0.11.2+1.20
+cca_version=5.2.0
+
+# Mixin Extras
+# https://github.com/LlamaLad7/MixinExtras
+me_version = 0.2.0-beta.6
+
+# Additional Entity Attributes
+# https://github.com/DaFuqs/AdditionalEntityAttributes
+aea_version=1.2.2+1.19.4
 
