--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,7 +7,7 @@ plugins {
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
-configure(allprojects) {
+subprojects {
 	apply plugin: "idea"
 	apply plugin: 'fabric-loom'
 }
