--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@ org.gradle.caching=true
 # Mod properties
 maven_group=com.sigmundgranaas
 mod_id=forgero
-forgero_version=0.12.0
+mod_name=Forgero
+mod_version=0.12.0
 release_type=release
 
 # Dependencies
