--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -2,120 +2,114 @@
 //file:noinspection GroovyAssignabilityCheck
 
 dependencies {
-	localRuntime project(':content:forgero-vanilla')
-	localRuntime project(':content:forgero-extended')
-	localRuntime project(':content:forgero-compat')
-	localRuntime project(':content:forgero-structures')
+	// Parent modules
+	implementation project(":${rootProject.mod_id}-core")
+	implementation project(path: ":fabric:${rootProject.mod_id}-fabric-core", configuration: "namedElements")
+	implementation project(path: ":fabric:modules:generator", configuration: "namedElements")
+	implementation project(path: ":fabric:minecraft-common", configuration: "namedElements")
 
-	localRuntime project(path: ':fabric:modules:bows', configuration: 'namedElements')
+	// Content submodules
+	localRuntime project(":content:${rootProject.mod_id}-vanilla")
+	localRuntime project(":content:${rootProject.mod_id}-extended")
+	localRuntime project(":content:${rootProject.mod_id}-compat")
+	localRuntime project(":content:${rootProject.mod_id}-structures")
 
-	implementation project(':forgero-core')
-	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
-	implementation project(path: ':fabric:modules:generator', configuration: 'namedElements')
-	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
+	localRuntime project(path: ":fabric:modules:bows", configuration: "namedElements")
 
-	modCompileOnly "vazkii.patchouli:Patchouli:${project.patchouli_version}"
-
+	modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
+	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
+	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}")
 	modImplementation("maven.modrinth:arrp:${project.arrp_version}")
 
-	//dynamiclights compat
+	// Patchouli
+	// TODO: Switch to Modonomicon
+	modCompileOnly "vazkii.patchouli:Patchouli:${project.patchouli_version}"
+
+	// LambDynamicLights
 	modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
 	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
-	// Simple hats
-	// modImplementation("maven.modrinth:simple-hats:${project.simple_hats_version}")
-	// modImplementation("maven.modrinth:trinkets:${project.trinkets_version}")
+	// Simple Hats
+//	 modImplementation("maven.modrinth:simple-hats:${project.simple_hats_version}")
+//	 modImplementation("maven.modrinth:trinkets:${project.trinkets_version}")
 
-	// Cardinal
-	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-	// modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	// Cardinal Components API
+//	 modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+//	 modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 
-	//better combat
-	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
-	//modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
-	//modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
+	// Better Combat
+//	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
+//	modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
+//	modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
-	// modCompileOnly("maven.modrinth:moremcmeta-emissive:v1.20.2-2.0.4-fabric")
+	// MoreMCMeta
+//	modCompileOnly("maven.modrinth:moremcmeta-emissive:v1.20.2-2.0.4-fabric")
 
-	// Betterend & Betternether
-	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
-	// modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
-	// modImplementation "maven.modrinth:MpzVLzy5:InVK1xFf"
+	// BetterX (BetterEnd & BetterNether)
+//	 modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
+//	 modImplementation "maven.modrinth:gc8OEnCC:5CIFclEA"
+//	 modImplementation "maven.modrinth:MpzVLzy5:InVK1xFf"
 
-	//emi
-	//modCompileOnly "dev.emi:emi:${emi_version}:api"
-	//modLocalRuntime "dev.emi:emi:${emi_version}"
-	// modImplementation "maven.modrinth:emi-loot:0.6.5+1.20.1"
-	modImplementation "maven.modrinth:emi:1.1.4+1.20.1+fabric"
+	// EMI
+//	modCompileOnly "dev.emi:emi:${emi_version}:api"
+//	modImplementation "maven.modrinth:emi-loot:0.6.5+1.20.1"
+//	modImplementation "maven.modrinth:emi:${rootProject.emi_version}+${rootProject.minecraft_version}+fabric"
 
-	//JEI
-	// modRuntimeOnly "maven.modrinth:jei:${project.jei_version}"
+	// JEI
+//	 modRuntimeOnly "maven.modrinth:jei:${project.jei_version}"
 
-	//toolstats testing
-	//modImplementation "curse.maven:tool-stats-377109:3944167"
-	//modImplementation "net.darkhax.bookshelf:Bookshelf-Fabric-1.19.2:16.1.11"
+	// REI
+//	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
+//	modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
+//	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+//	modImplementation "curse.maven:roughly-enough-resources-325625:3837336"
 
+	// ToolStats
+//	modImplementation "curse.maven:tool-stats-377109:3944167"
+//	modImplementation "net.darkhax.bookshelf:Bookshelf-Fabric-1.19.2:16.1.11"
 
-	//Twilight forest compat
-	//modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
+	// Twilight Forest
+//	modImplementation "teamtwilight:twilightforest:4.1.1102:universal"
 
-	//continuity testing
-	//modImplementation "curse.maven:continuity-531351:3822250"
+	// Continuity
+//	modImplementation "curse.maven:continuity-531351:3822250"
 
-	//alloygery testing
-	//modImplementation "curse.maven:alloygery-573592:3778894"
-	//modImplementation "curse.maven:nbtcrafting-314633:3707208"
+	// Alloygery
+//	modImplementation "curse.maven:alloygery-573592:3778894"
+//	modImplementation "curse.maven:nbtcrafting-314633:3707208"
 
-	//Therassium testing
-	//modImplementation "curse.maven:therassium-554562:3829121"
-	//modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
+	// Therassium
+//	modImplementation "curse.maven:therassium-554562:3829121"
+//	modImplementation "de.guntram.mcmod:crowdin-translate:1.4+1.18.2"
 
-	//mythicmetals testing
-	//modImplementation "curse.maven:mythicmetals-410127:4118479"
-	//modImplementation "curse.maven:alloy-forgery-438718:4073356"
-	//modImplementation "curse.maven:owo-lib-532610:4028921"
-	//annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
-	//modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:${project.rei_version}"
-	//modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
-	//modImplementation "curse.maven:roughly-enough-resources-325625:3837336"
-	//modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
-	//modApi "curse.maven:modmenu-308702:4145207"
-	//modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
-	//include modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
-	// Cardinal Components
+	// Mythic Metals
+//	modImplementation "curse.maven:mythicmetals-410127:4118479"
+//	modImplementation "curse.maven:alloy-forgery-438718:4073356"
+//	modImplementation "curse.maven:owo-lib-532610:4028921"
+//	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+//	modRuntimeOnly "dev.architectury:architectury-fabric:${project.architectury_version}"
+//	modImplementation "com.github.DaFuqs:AdditionalEntityAttributes:${project.aea_versionite}"
+//	include(modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}"))
 
-	//ae2 testing
-	//modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
-	//modLocalRuntime('teamreborn:energy:2.3.0')
+	// Applied Energistics 2
+//	modLocalRuntime "maven.modrinth:ae2:fabric-12.9.2"
+//	modLocalRuntime('teamreborn:energy:2.3.0')
 
-	//IPN testing
-	//modCompileOnly "curse.maven:inventory-profiles-next-495267:4263990"
-	//modCompileOnly "curse.maven:libipn-679177:4263961"
+	// InventoryProfilesNext
+//	modCompileOnly "curse.maven:inventory-profiles-next-495267:4263990"
+//	modCompileOnly "curse.maven:libipn-679177:4263961"
 
-	//Polymorph testing
+	// Polymorph
+//	modImplementation "curse.maven:cardinal-components-318449:3669769"
+//	modImplementation "curse.maven:cardinal-components-318449:3669770"
+//	modImplementation "curse.maven:cardinal-components-318449:3669771"
+//	modImplementation "curse.maven:cardinal-components-318449:3669774"
+//	modImplementation "curse.maven:cardinal-components-318449:3669773"
+//	modImplementation "curse.maven:polymorph-397434:3793108"
 
-	//modImplementation "curse.maven:cardinal-components-318449:3669769"
-	//modImplementation "curse.maven:cardinal-components-318449:3669770"
-	//modImplementation "curse.maven:cardinal-components-318449:3669771"
-	//modImplementation "curse.maven:cardinal-components-318449:3669774"
-	//modImplementation "curse.maven:cardinal-components-318449:3669773"
-	//modImplementation "curse.maven:polymorph-397434:3793108"
-
-	//modImplementation "curse.maven:combatedit-385513:3869344"
-
-	//modImplementation 'com.ptsmods:devlogin:2.1'
-
-	modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-
-	// Mod Menu API
-	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
-
-	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}"
-
-	modLocalRuntime "maven.modrinth:just-load:${project.justload_version}"
-
+	// CombatEdit
+//	modImplementation "curse.maven:combatedit-385513:3869344"
 }
 
 sourceSets {
@@ -127,22 +121,22 @@ sourceSets {
 }
 
 loom {
-	accessWidenerPath = file("src/main/resources/forgero-fabric-compat.accesswidener")
+	accessWidenerPath = file("src/main/resources/${project.name}.accesswidener")
 	runs {
-		testmodServer {
+		testModServer {
 			server()
 			ideConfigGenerated project.rootProject == project
-			name = "Testmod Server"
+			name = "TestMod Server"
 			source sourceSets.test
 		}
-		gametest {
-			inherit testmodServer
+		gameTest {
+			inherit testModServer
 
 			name "Game Test"
 			// Enable the gametest runner
 			vmArg "-Dfabric-api.gametest"
 			vmArg "-Dfabric-api.gametest.report-file=${project.layout.buildDirectory}/junit.xml"
-			runDir "build/gametest"
+			runDir "build/gameTest"
 		}
 	}
 }
@@ -153,5 +147,3 @@ test {
 	testLogging.events("failed")
 	testLogging.info.events = ["failed", "skipped"]
 }
-
-//test.dependsOn runGametest
