--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,4 +1,4 @@
-# Fabric compat
+# Dependencies
 # Cloth Config
 # https://github.com/shedaniel/cloth-config
 cloth_config_version=10.0.96+fabric
@@ -40,9 +40,7 @@ patchouli_version=1.20.1-81-FABRIC
 # Better Combat
 # https://github.com/ZsoltMolnarrr/BetterCombat
 better_combat_version=1.7.3+1.20.1-fabric
-justload_version=1.0.3
 jei_version=15.2.0.27
 yacl_version=3.2.2+1.20
 simple_hats_version=1.20.1-0.2.0$
 trinkets_version=3.7.2
-
