--- a/settings.gradle
+++ b/settings.gradle
@@ -8,22 +8,22 @@ pluginManagement {
 rootProject.name = "${mod_id}"
 
 // Core
-include 'forgero-core'
+include("${mod_id}-core")
 
 // Content
-include 'content'
-include 'content:forgero-extended'
-include 'content:forgero-vanilla'
-include 'content:forgero-compat'
-include 'content:forgero-structures'
+include("content")
+include("content:${mod_id}-extended")
+include("content:${mod_id}-vanilla")
+include("content:${mod_id}-compat")
+include("content:${mod_id}-structures")
 
 // Fabric
-include 'fabric'
-include 'fabric:forgero-fabric-core'
-include 'fabric:forgero-fabric-compat'
-include 'fabric:minecraft-common'
+include "fabric"
+include "fabric:${mod_id}-fabric-core"
+include "fabric:${mod_id}-fabric-compat"
+include "fabric:minecraft-common"
 
 // Modules
-include 'fabric:modules'
-include 'fabric:modules:bows'
-include 'fabric:modules:generator'
+include "fabric:modules"
+include "fabric:modules:bows"
+include "fabric:modules:generator"
