--- a/build.gradle
+++ b/build.gradle
@@ -40,15 +40,6 @@ println("${rootProject.mod_name} version: ${getGitVersion()}")
 version = "${getGitVersion()}"
 group = project.maven_group
 
-dependencies {
-	api(annotationProcessor("org.projectlombok:lombok:1.18.34"))
-
-	api("org.jetbrains:annotations:24.1.0")
-	implementation("com.google.guava:guava:33.2.1-jre")
-	implementation("org.apache.logging.log4j:log4j-core:2.23.1")
-	implementation("com.google.code.gson:gson:2.11.0")
-}
-
 allprojects {
 	apply plugin: "java-library"
 	apply plugin: "idea"
@@ -64,7 +55,6 @@ allprojects {
 		maven { url = "https://maven.terraformersmc.com/" }
 		maven { url = "https://maven.wispforest.io/" }
 		maven { url = "https://maven.cafeteria.dev" }
-		maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
 		maven { url = "https://maven.gegy.dev" }
 		maven { url = "https://maven.kosmx.dev/" }
 		maven { url = "https://jitpack.io" }
@@ -77,6 +67,21 @@ allprojects {
 			name = "Ladysnake Mods"
 			url = "https://maven.ladysnake.org/releases"
 		}
+		maven {
+			url = "https://maven.jamieswhiteshirt.com/libs-release"
+			content {
+				includeGroup "com.jamieswhiteshirt"
+			}
+		}
+	}
+
+	dependencies {
+		api(annotationProcessor("org.projectlombok:lombok:1.18.34"))
+
+		api("org.jetbrains:annotations:24.1.0")
+		api("com.google.guava:guava:33.2.1-jre")
+		api("org.apache.logging.log4j:log4j-core:2.23.1")
+		api("com.google.code.gson:gson:2.11.0")
 	}
 
 	tasks.withType(JavaCompile).configureEach {
