--- a/forgero-core/build.gradle
+++ b/forgero-core/build.gradle
@@ -2,6 +2,8 @@
 //file:noinspection GroovyAssignabilityCheck
 
 dependencies {
+	api("com.mojang:datafixerupper:${project.data_fixer_upper_version}")
+
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
